kubernetes/dev/altair-websock/1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: altair-websock-lb-dev
  namespace: "altair-websock-dev"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: altair-websock
